# WEB_Python17M8

./: .gitignore  models.py  pyproject.toml
rabbit_dz/app/: consumer.py  producer.py  task_models.py
