[tool.poetry]
name = "web-python17m8"
version = "0.1.0"
description = ""
authors = ["hedgyv <hedgy85@hotmail.com>"]
license = "yarik_dz8"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
